<resources>
    <string name="app_name">GTSOFieldOperations</string>
    <string name="SubmittingExeImgMsg">Submitting Execution Image…</string>
    <string name="invoiceNumber">./- abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="NoPendingDataMsg">There is no Pending data for upload</string>
    <string name="Summary">Summary</string>
    <string name="SalesPersonName">Store Owner Name :</string>
    <string name="SalesPersonContact">Store Owner Contact :</string>
    <string name="SalesPersonAddress">Sales Person Address :</string>
    <string name="StoreCatType">Store Category Type :</string>
    <string name="ValidatingMsg">Validating User</string>
    <string name="LastVisitDate">Last Visit Date :</string>
    <string name="Details">Details</string>
    <string name="LastOrderDate">Last Invoice Date : </string>
    <string name="ExecutionSummary">Execution Summary : </string>
    <string name="txtWelcome">Welcome</string>
    <string name="txtDayStart">Day Start</string>
    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="txtUpdate">Update Now</string>
    <string name="txtNotYou">Not You</string>
    <string name="hintMobileNo">Mobile No.</string>
    <string name="txtValidate">Validate</string>
    <string name="txtFName">First Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtContactNo">Contact No.</string>
    <string name="txtDOB">DOB</string>
    <string name="txtSelectDate">Select Date</string>
    <string name="txtSex">Sex</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtMarried">Married</string>
    <string name="txtUnmarried">Unmarried</string>
    <string name="txtMarriedDate">Married Date</string>
    <string name="txtQualification">Qualification</string>
    <string name="txtSelect">Select</string>
    <string name="txtUpdatedphoto">Updated photo</string>
    <string name="txtSelfie">Selfie</string>
    <string name="txtBrowse">Browse</string>
    <string name="txtEmailID">EmailID</string>
    <string name="txtBloodGroup">Blood Group</string>
    <string name="txtSIGNHERE">SIGN HERE</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtclearSign">clear Sign</string>
    <string name="txtsave">save</string>
    <string name="txtNoCamera">Sorry, your phone does not have a camera!</string>
    <string name="txtNoFrontCamera">No front facing camera found.</string>
    <string name="txtSuccessfullySaved">Successfully Saved</string>
    <string name="txtSELECTDOB">SELECT DOB</string>
    <string name="txtSelectMarriedDate">Select Married Date</string>
    <string name="txtBloodGroupTitle">Blood-Group</string>
    <string name="txtSubmitData">Do you want to submit data</string>
    <string name="txtErrorNoDataConnection">No Data Connection!</string>
    <string name="txtErrorInternetConnection">Your device has no Data Connection! Please ensure Internet is accessible to Continue.</string>
    <string name="txtErrorMobileNo">Mobile no. is not valid</string>
    <string name="txtSelectDOB">Please select DOB</string>
    <string name="txtValidateFirstName">First Name is empty</string>
    <string name="txtValidateLastName">Last Name is empty</string>
    <string name="txtValidateContactNo">Contact no. is not valid</string>
    <string name="txtValidateSelectSex">Please select Sex</string>
    <string name="txtValidateMaritalStatus">Please select Marital Status</string>
    <string name="txtValidateMarriedDate">Please select Married Date</string>
    <string name="txtValidateQualification">Please select Qualification</string>
    <string name="txtValidateUpdatePhoto">Please Update Photo</string>
    <string name="txtValidateEmailID">EmailID is not valid</string>
    <string name="txtValidateBloodGroup">Please select Blood-Group</string>
    <string name="txtValidateSignature">Please do Signature</string>
    <string name="txtDSRMsg">Please remember to update your personal details today before doing day end activity</string>
    <string name="ManageDSRMsg">Manage DSM &amp; IMEI</string>
    <string name="AlertDialogHeaderMsg">Alert</string>
    <string name="NoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="AlertDialogOkButton">OK</string>
    <string name="AlertDialogCancelButton">Cancel</string>
    <string name="AlertDialogYesButton">Yes</string>
    <string name="AlertDialogNoButton">No</string>
    <string name="searchingnearbystores">Searching Nearby Stores</string>
    <string name="PleaseConformMsg">Please Confirm</string>
    <string name="ConfirmExitMsg">Confirm Exit</string>
    <string name="genTermRetrivingTargetVsAchievedSummary">Generating Target Vs Achieved Report…</string>
    <string name="internetslowMsggg">Your device Data Connection is slow.</string>
    <string name="AlertDialogHeaderErrorMsg">Error</string>
    <string name="msgNoImagesToShow">Your device Data Connection is slow.</string>
    <string name="genTermNoDataConnectionForViewingImgaesOnline">Your device has no Data Connection. \n Please ensure Internet is accessible to see Store images..</string>
    <string name="genlocaldataMsg">Data saved locally,will send to server once Internet is accessible.</string>
    <string name="searchingcurrentposition">Searching Your Current Position</string>
    <string name="uploading_errorXMLFiles">Error while uploading pending store details</string>
    <string name="LogoutMsg">Are you sure you want to logout</string>
    <string name="pending_data">Submit Pending Data</string>
    <string name="submit_pending_data">Looks data has been not submitted yet, Please submit data before refreshing complete data</string>
    <string name="uploading_error">Error while uploading image</string>
    <string name="AvailableRoutesMsg">Available Routes</string>
    <string name="NewVersionMsg">New Version of this application is available now. \nPlease click on OK to install new Version!</string>
    <string name="PleaseWaitMsg">Please Wait ...</string>
    <string name="RetrivingDataMsg">Retrieving Data…</string>
    <string name="UpdatingNewVersionMsg">Updating New Version…</string>
    <string name="AvailableRouteMsg">Available Route</string>
    <string name="reason_prompt">Please Select Reason</string>
    <string name="category_prompt">Please Select Category</string>
    <string name="Route_prompt">Change Route</string>
    <string name="genTermNoDataConnection">Information</string>
    <string name="phone_nos">Phone Num:</string>
    <string name="genTermNoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="txtOk">OK</string>
    <string name="msg_loc" translatable="false">Retrieving Location…. This process may take up to 2 minutes to derive your accurate location.  Please wait till the next screen appears with your location</string>
    <string name="internetProb" translatable="false">Internet connection is required to view location on map.</string>
    <string name="spinner_route">Routes </string>
    <string name="remarks">.,/- abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="spinner_store_type">Store Type </string>
    <string name="spinner_trade_channel">Trade Channel </string>
    <string name="spinner_store_Category">Store Category </string>
    <string name="spinner_retailer_sales_type">Retailer Sales Type </string>
    <string name="spinner_store_potential_type">Store Potential Type </string>
    <string name="spinner_distributor_type">Please Select Category </string>
    <string name="spinner_classification">Store Classification</string>
    <string name="dot_numbers">.1234567890</string>
    <string name="only_alpha_numeric_new">.- ,abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="only_alpha_numeric_email">.- _,abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="only_character_Space_no_slash">.- abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string-array name="chMonthlyVOL">
        <item>Reason</item>
        <item>Unpacked</item>
        <item>Expire Date</item>
        <item>Not Good Quality</item>
        <item>High Price</item>
    </string-array>
    <string name="syncAlertErrMsgg"><small>Internet is slow..... \nTrying again \.....</small></string>
    <string name="syncAlertErrMsggg"><small>Internet is slow. \n Data Saved. It will get submitted later on \n automatically.</small></string>
    <string name="spinnerloc">Distributor Names </string>
    <string name="spinnerarea">Route Names </string>
    <string name="spinnerstore">Store Type </string>
    <string name="spinnerroute">Available Route</string>
    <string name="only_alpha_numeric">.- abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="atoreNameValidation">.-/ abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="nameValidation">. abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="addressValidation">.,/- abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="btnSaveData">Submit</string>
    <string name="submit_sent_server">Submit And Sent\nto Server</string>
    <string name="submit_not_sent_server">Submit but Not\nSent to Server</string>
    <string name="saved_not_submit">Saved but\nnot Submit</string>
    <string name="title_activity_sync_master">Sync Data</string>
    <string name="connAlertErrMsg"><small>Your device has no Data Connection. \nPlease ensure Internet is accessible to Continue.</small></string>
    <string name="battAlertErrMsg"><small>Your device is low on battery. \nPlease Charge your device\'s battery to Continue.</small></string>
    <string name="syncAlertOKMsg"><small>Order submission was successful.</small></string>
    <string name="syncAlertStoreQuotationOKMsg"><small>Store Quotation submission was successful</small></string>
    <string name="syncAlertInvoiceOKMsg"><small>Details submitted!</small></string>
    <string name="submitConfirmAlert"><small>Store Order details will be Synced! \nDo you want to Submit Order Details?</small></string>
    <string name="returnsConfirmAlert"><small>Store Stock Data will be Saved! \nDo you want to make Returns?</small></string>
    <string name="returnsConfirmAlert2"><small>No Stock was taken! \nDo you want to Continue ?</small></string>
    <string name="syncAlertErrMsg"><small>Sync was not successful. \nPlease try again.</small></string>
    <string name="syncAlertErrMsgDayEndOrChangeRoute"><small>Due to Internet connectivity breakdown, not able to submit orders. \nPlease try again.</small></string>
    <string name="syncAlertErrMsgQuotationSubmissionDayEndOrChangeRoute"><small>Due to Internet connectivity breakdown, not able to submit orders. \nPlease try again.</small></string>
    <string name="syncAlertNoRecordsMsg"><small>No Records available to Sync. \nPlease fill-in and submit the Questionnaire.</small></string>
    <string name="syncAlertRecordsMsg"><small>New Records available to Sync. \nPlease Sync your Device\'s Data before filling Questionnaire.</small></string>
    <string name="AlertNoMapRecordsMsg"><small>No Records available to plot Route Map. \nPlease fill-in and submit the Questionnaire.</small></string>
    <string name="saveAlertOKMsg"><small>Details submitted successfully!</small></string>
    <string name="lastvisitdetails_back">Back</string>
    <string name="lastvisitdetails_next">Next</string>
    <string name="lastvisitdetails_skuname">SKU Name</string>
    <string name="lastvisitdetails_stock">Stock</string>
    <string name="lastvisitdetails_oqty">O.Qty</string>
</resources>